editing service-inside

--- a/photosessions-inside.html
+++ b/photosessions-inside.html
@@ -20,6 +20,9 @@
 	<!-- custom css -->
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
+
+	<!-- adaptive css -->
+	<link rel="stylesheet" href="css/adaptive.css">
   </head>
   <body>
   <div class="body-wrapper">
@@ -73,38 +76,30 @@
 	 		<div class="row row-padding-0">
         		<div class="photo-preview">
           			<div class="photo-mix">
-            			<a href="img/sw1.jpg" class="min-photo col-md-3 mix"><div class="img-container" style="background: url('img/sw1.jpg') center center / cover;"></div></a>
-			            <a href="img/sw2.jpg" class="min-photo col-md-3 mix"><div class="img-container" style="background: url('img/sw2.jpg') center center / cover;"></div></a>
-			            <a href="img/sw3.jpg" class="min-photo col-md-3 mix"><div class="img-container" style="background: url('img/sw3.jpg') center center / cover;"></div></a>
-			            <a href="img/sw4.jpg" class="min-photo col-md-3 mix"><div class="img-container" style="background: url('img/sw4.jpg') center center / cover;"></div></a>
-			            <a href="img/sw1.jpg" class="min-photo col-md-3 mix"><div class="img-container" style="background: url('img/sw1.jpg') center center / cover;"></div></a>
-			            <a href="img/sw2.jpg" class="min-photo col-md-3 mix"><div class="img-container" style="background: url('img/sw2.jpg') center center / cover;"></div></a>
-			            <a href="img/sw3.jpg" class="min-photo col-md-3 mix"><div class="img-container" style="background: url('img/sw3.jpg') center center / cover;"></div></a>
-			            <a href="img/sw4.jpg" class="min-photo col-md-3 mix"><div class="img-container" style="background: url('img/sw4.jpg') center center / cover;"></div></a>
-			            <a href="img/sw1.jpg" class="min-photo col-md-3 mix"><div class="img-container" style="background: url('img/sw1.jpg') center center / cover;"></div></a>
-			            <a href="img/sw2.jpg" class="min-photo col-md-3 mix"><div class="img-container" style="background: url('img/sw2.jpg') center center / cover;"></div></a>
-			            <a href="img/sw3.jpg" class="min-photo col-md-3 mix"><div class="img-container" style="background: url('img/sw3.jpg') center center / cover;"></div></a>
-			            <a href="img/sw4.jpg" class="min-photo col-md-3 mix"><div class="img-container" style="background: url('img/sw4.jpg') center center / cover;"></div></a>
-			            <a href="img/sw1.jpg" class="min-photo col-md-3 mix"><div class="img-container" style="background: url('img/sw1.jpg') center center / cover;"></div></a>
-			            <a href="img/sw2.jpg" class="min-photo col-md-3 mix"><div class="img-container" style="background: url('img/sw2.jpg') center center / cover;"></div></a>
-			            <a href="img/sw3.jpg" class="min-photo col-md-3 mix"><div class="img-container" style="background: url('img/sw3.jpg') center center / cover;"></div></a>
-			            <a href="img/sw4.jpg" class="min-photo col-md-3 mix"><div class="img-container" style="background: url('img/sw4.jpg') center center / cover;"></div></a>
-			            <a href="img/sw1.jpg" class="min-photo col-md-3 mix"><div class="img-container" style="background: url('img/sw1.jpg') center center / cover;"></div></a>
-			            <a href="img/sw2.jpg" class="min-photo col-md-3 mix"><div class="img-container" style="background: url('img/sw2.jpg') center center / cover;"></div></a>
-			            <a href="img/sw3.jpg" class="min-photo col-md-3 mix"><div class="img-container" style="background: url('img/sw3.jpg') center center / cover;"></div></a>
-			            <a href="img/sw4.jpg" class="min-photo col-md-3 mix"><div class="img-container" style="background: url('img/sw4.jpg') center center / cover;"></div></a>
-			            <a href="img/sw1.jpg" class="min-photo col-md-3 mix"><div class="img-container" style="background: url('img/sw1.jpg') center center / cover;"></div></a>
-			            <a href="img/sw2.jpg" class="min-photo col-md-3 mix"><div class="img-container" style="background: url('img/sw2.jpg') center center / cover;"></div></a>
-			            <a href="img/sw3.jpg" class="min-photo col-md-3 mix"><div class="img-container" style="background: url('img/sw3.jpg') center center / cover;"></div></a>
-			            <a href="img/sw4.jpg" class="min-photo col-md-3 mix"><div class="img-container" style="background: url('img/sw4.jpg') center center / cover;"></div></a>
-			            <a href="img/sw1.jpg" class="min-photo col-md-3 mix"><div class="img-container" style="background: url('img/sw1.jpg') center center / cover;"></div></a>
-			            <a href="img/sw2.jpg" class="min-photo col-md-3 mix"><div class="img-container" style="background: url('img/sw2.jpg') center center / cover;"></div></a>
-			            <a href="img/sw3.jpg" class="min-photo col-md-3 mix"><div class="img-container" style="background: url('img/sw3.jpg') center center / cover;"></div></a>
-			            <a href="img/sw4.jpg" class="min-photo col-md-3 mix"><div class="img-container" style="background: url('img/sw4.jpg') center center / cover;"></div></a>
-			            <a href="img/sw1.jpg" class="min-photo col-md-3 mix"><div class="img-container" style="background: url('img/sw1.jpg') center center / cover;"></div></a>
-			            <a href="img/sw2.jpg" class="min-photo col-md-3 mix"><div class="img-container" style="background: url('img/sw2.jpg') center center / cover;"></div></a>
-			            <a href="img/sw3.jpg" class="min-photo col-md-3 mix"><div class="img-container" style="background: url('img/sw3.jpg') center center / cover;"></div></a>
-			            <a href="img/sw4.jpg" class="min-photo col-md-3 mix"><div class="img-container" style="background: url('img/sw4.jpg') center center / cover;"></div></a>
+            			<a href="img/sw1.jpg" class="min-photo col-md-3 col-sm-4 col-xs-6 mix"><div class="img-container" style="background: url('img/sw1.jpg') center center / cover;"></div></a>
+			            <a href="img/sw1.jpg" class="min-photo col-md-3 col-sm-4 col-xs-6 mix"><div class="img-container" style="background: url('img/sw2.jpg') center center / cover;"></div></a>
+			            <a href="img/sw1.jpg" class="min-photo col-md-3 col-sm-4 col-xs-6 mix"><div class="img-container" style="background: url('img/sw3.jpg') center center / cover;"></div></a>
+			            <a href="img/sw1.jpg" class="min-photo col-md-3 col-sm-4 col-xs-6 mix"><div class="img-container" style="background: url('img/sw4.jpg') center center / cover;"></div></a>
+			            <a href="img/sw1.jpg" class="min-photo col-md-3 col-sm-4 col-xs-6 mix"><div class="img-container" style="background: url('img/sw1.jpg') center center / cover;"></div></a>
+			            <a href="img/sw1.jpg" class="min-photo col-md-3 col-sm-4 col-xs-6 mix"><div class="img-container" style="background: url('img/sw2.jpg') center center / cover;"></div></a>
+			            <a href="img/sw1.jpg" class="min-photo col-md-3 col-sm-4 col-xs-6 mix"><div class="img-container" style="background: url('img/sw3.jpg') center center / cover;"></div></a>
+			            <a href="img/sw1.jpg" class="min-photo col-md-3 col-sm-4 col-xs-6 mix"><div class="img-container" style="background: url('img/sw4.jpg') center center / cover;"></div></a>
+			            <a href="img/sw1.jpg" class="min-photo col-md-3 col-sm-4 col-xs-6 mix"><div class="img-container" style="background: url('img/sw1.jpg') center center / cover;"></div></a>
+			            <a href="img/sw1.jpg" class="min-photo col-md-3 col-sm-4 col-xs-6 mix"><div class="img-container" style="background: url('img/sw2.jpg') center center / cover;"></div></a>
+			            <a href="img/sw1.jpg" class="min-photo col-md-3 col-sm-4 col-xs-6 mix"><div class="img-container" style="background: url('img/sw3.jpg') center center / cover;"></div></a>
+			            <a href="img/sw1.jpg" class="min-photo col-md-3 col-sm-4 col-xs-6 mix"><div class="img-container" style="background: url('img/sw4.jpg') center center / cover;"></div></a>
+			            <a href="img/sw1.jpg" class="min-photo col-md-3 col-sm-4 col-xs-6 mix"><div class="img-container" style="background: url('img/sw1.jpg') center center / cover;"></div></a>
+			            <a href="img/sw1.jpg" class="min-photo col-md-3 col-sm-4 col-xs-6 mix"><div class="img-container" style="background: url('img/sw2.jpg') center center / cover;"></div></a>
+			            <a href="img/sw1.jpg" class="min-photo col-md-3 col-sm-4 col-xs-6 mix"><div class="img-container" style="background: url('img/sw3.jpg') center center / cover;"></div></a>
+			            <a href="img/sw1.jpg" class="min-photo col-md-3 col-sm-4 col-xs-6 mix"><div class="img-container" style="background: url('img/sw4.jpg') center center / cover;"></div></a>
+			            <a href="img/sw1.jpg" class="min-photo col-md-3 col-sm-4 col-xs-6 mix"><div class="img-container" style="background: url('img/sw1.jpg') center center / cover;"></div></a>
+			            <a href="img/sw1.jpg" class="min-photo col-md-3 col-sm-4 col-xs-6 mix"><div class="img-container" style="background: url('img/sw2.jpg') center center / cover;"></div></a>
+			            <a href="img/sw1.jpg" class="min-photo col-md-3 col-sm-4 col-xs-6 mix"><div class="img-container" style="background: url('img/sw3.jpg') center center / cover;"></div></a>
+			            <a href="img/sw1.jpg" class="min-photo col-md-3 col-sm-4 col-xs-6 mix"><div class="img-container" style="background: url('img/sw4.jpg') center center / cover;"></div></a>
+			            <a href="img/sw1.jpg" class="min-photo col-md-3 col-sm-4 col-xs-6 mix"><div class="img-container" style="background: url('img/sw1.jpg') center center / cover;"></div></a>
+			            <a href="img/sw1.jpg" class="min-photo col-md-3 col-sm-4 col-xs-6 mix"><div class="img-container" style="background: url('img/sw2.jpg') center center / cover;"></div></a>
+			            <a href="img/sw1.jpg" class="min-photo col-md-3 col-sm-4 col-xs-6 mix"><div class="img-container" style="background: url('img/sw3.jpg') center center / cover;"></div></a>
+			            <a href="img/sw1.jpg" class="min-photo col-md-3 col-sm-4 col-xs-6 mix"><div class="img-container" style="background: url('img/sw4.jpg') center center / cover;"></div></a>
 			            
 
           			</div>          
