--- a/portfolio.html
+++ b/portfolio.html
@@ -20,6 +20,9 @@
 	<!-- custom css -->
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
+
+	<!-- adaptive css -->
+	<link rel="stylesheet" href="css/adaptive.css">
   </head>
   <body>
   <div class="body-wrapper">
@@ -63,7 +66,7 @@
 
 	<div class="container">
 		<div class="row portfolio-content-wrapper">
-			<div class="col-md-3 menubar">
+			<div class="col-md-3 col-sm-3 col-xs-12 menubar">
 				<ul class="photo-category">
 				  <li data-filter="all">Все фотографии</li>
 				  <li data-filter=".love-story">Love story</li>
@@ -78,13 +81,28 @@
             </div>
         </div>
 			</div>
-			<div class="col-md-9 portfolio-gallery-wrapper">
+			<div class="col-md-9 col-sm-9 col-xs-12 portfolio-gallery-wrapper">
 				<div class="row row-padding-0">
         			<div class="photo-preview">
           				<div class="photo-mix">
-				            <a href="img/sw1.jpg" class="min-photo col-md-4 mix love-story"><div class="img-container" style="background: url('img/sw1.jpg') center center / cover;"></div></a>
-				            <a href="img/sw1.jpg" class="min-photo col-md-4 mix portrait"><div class="img-container" style="background: url('img/sw1.jpg') center center / cover;"></div></a>
-				            <a href="img/sw1.jpg" class="min-photo col-md-4 mix portrait"><div class="img-container" style="background: url('img/sw1.jpg') center center / cover;"></div></a>
+				            <a href="img/sw1.jpg" class="min-photo col-md-4 col-sm-4 col-xs-6 mix love-story"><div class="img-container" style="background: url('img/sw1.jpg') center center / cover;"></div></a>
+				            <a href="img/sw2.jpg" class="min-photo col-md-4 col-sm-4 col-xs-6 mix portrait"><div class="img-container" style="background: url('img/sw2.jpg') center center / cover;"></div></a>
+				            <a href="img/sw3.jpg" class="min-photo col-md-4 col-sm-4 col-xs-6 mix portrait"><div class="img-container" style="background: url('img/sw3.jpg') center center / cover;"></div></a>
+				            <a href="img/sw4.jpg" class="min-photo col-md-4 col-sm-4 col-xs-6 mix portrait"><div class="img-container" style="background: url('img/sw4.jpg') center center / cover;"></div></a>
+				            <a href="img/sw1.jpg" class="min-photo col-md-4 col-sm-4 col-xs-6 mix love-story"><div class="img-container" style="background: url('img/sw1.jpg') center center / cover;"></div></a>
+				            <a href="img/sw2.jpg" class="min-photo col-md-4 col-sm-4 col-xs-6 mix portrait"><div class="img-container" style="background: url('img/sw2.jpg') center center / cover;"></div></a>
+				            <a href="img/sw3.jpg" class="min-photo col-md-4 col-sm-4 col-xs-6 mix portrait"><div class="img-container" style="background: url('img/sw3.jpg') center center / cover;"></div></a>
+				            <a href="img/sw4.jpg" class="min-photo col-md-4 col-sm-4 col-xs-6 mix portrait"><div class="img-container" style="background: url('img/sw4.jpg') center center / cover;"></div></a>
+				            <a href="img/sw1.jpg" class="min-photo col-md-4 col-sm-4 col-xs-6 mix love-story"><div class="img-container" style="background: url('img/sw1.jpg') center center / cover;"></div></a>
+				            <a href="img/sw2.jpg" class="min-photo col-md-4 col-sm-4 col-xs-6 mix portrait"><div class="img-container" style="background: url('img/sw2.jpg') center center / cover;"></div></a>
+				            <a href="img/sw3.jpg" class="min-photo col-md-4 col-sm-4 col-xs-6 mix portrait"><div class="img-container" style="background: url('img/sw3.jpg') center center / cover;"></div></a>
+				            <a href="img/sw4.jpg" class="min-photo col-md-4 col-sm-4 col-xs-6 mix portrait"><div class="img-container" style="background: url('img/sw4.jpg') center center / cover;"></div></a>
+				            <a href="img/sw1.jpg" class="min-photo col-md-4 col-sm-4 col-xs-6 mix love-story"><div class="img-container" style="background: url('img/sw1.jpg') center center / cover;"></div></a>
+				            <a href="img/sw2.jpg" class="min-photo col-md-4 col-sm-4 col-xs-6 mix portrait"><div class="img-container" style="background: url('img/sw2.jpg') center center / cover;"></div></a>
+				            <a href="img/sw3.jpg" class="min-photo col-md-4 col-sm-4 col-xs-6 mix portrait"><div class="img-container" style="background: url('img/sw3.jpg') center center / cover;"></div></a>
+				            <a href="img/sw4.jpg" class="min-photo col-md-4 col-sm-4 col-xs-6 mix portrait"><div class="img-container" style="background: url('img/sw4.jpg') center center / cover;"></div></a>
+				            
+
             			</div>
         			</div>
    		 		</div>
