--- a/fotosessions.html
+++ b/fotosessions.html
@@ -73,10 +73,10 @@
         <div class="row row-padding-0">
         <div class="photo-preview">
           <div class="photo-mix">
-            <a href="img/sw1.jpg" class="min-photo col-md-3 mix"><div class="img-container" style="background: url('img/sw1.jpg') center center / cover;"></div></a>
-            <a href="img/sw1.jpg" class="min-photo col-md-3 mix"><div class="img-container" style="background: url('img/sw1.jpg') center center / cover;"></div></a>
-            <a href="img/sw1.jpg" class="min-photo col-md-3 mix"><div class="img-container" style="background: url('img/sw1.jpg') center center / cover;"></div></a>
-            <a href="img/sw1.jpg" class="min-photo col-md-3 mix"><div class="img-container" style="background: url('img/sw1.jpg') center center / cover;"></div></a>
+            <a href="img/sw1.jpg" class="min-photo col-md-3 col-sm-3 col-xs-6 mix"><div class="img-container" style="background: url('img/sw1.jpg') center center / cover;"></div></a>
+            <a href="img/sw1.jpg" class="min-photo col-md-3 col-sm-3 col-xs-6 mix"><div class="img-container" style="background: url('img/sw2.jpg') center center / cover;"></div></a>
+            <a href="img/sw1.jpg" class="min-photo col-md-3 col-sm-3 col-xs-6 mix"><div class="img-container" style="background: url('img/sw3.jpg') center center / cover;"></div></a>
+            <a href="img/sw1.jpg" class="min-photo col-md-3 col-sm-3 col-xs-6 mix"><div class="img-container" style="background: url('img/sw4.jpg') center center / cover;"></div></a>
           </div>          
         </div>
 
@@ -106,10 +106,10 @@
         <div class="row row-padding-0">
         <div class="photo-preview">
           <div class="photo-mix">
-            <a href="img/sw1.jpg" class="min-photo col-md-3 mix"><div class="img-container" style="background: url('img/sw1.jpg') center center / cover;"></div></a>
-            <a href="img/sw1.jpg" class="min-photo col-md-3 mix"><div class="img-container" style="background: url('img/sw1.jpg') center center / cover;"></div></a>
-            <a href="img/sw1.jpg" class="min-photo col-md-3 mix"><div class="img-container" style="background: url('img/sw1.jpg') center center / cover;"></div></a>
-            <a href="img/sw1.jpg" class="min-photo col-md-3 mix"><div class="img-container" style="background: url('img/sw1.jpg') center center / cover;"></div></a>
+            <a href="img/sw1.jpg" class="min-photo col-md-3 col-sm-3 col-xs-6 mix"><div class="img-container" style="background: url('img/sw1.jpg') center center / cover;"></div></a>
+            <a href="img/sw1.jpg" class="min-photo col-md-3 col-sm-3 col-xs-6 mix"><div class="img-container" style="background: url('img/sw2.jpg') center center / cover;"></div></a>
+            <a href="img/sw1.jpg" class="min-photo col-md-3 col-sm-3 col-xs-6 mix"><div class="img-container" style="background: url('img/sw3.jpg') center center / cover;"></div></a>
+            <a href="img/sw1.jpg" class="min-photo col-md-3 col-sm-3 col-xs-6 mix"><div class="img-container" style="background: url('img/sw4.jpg') center center / cover;"></div></a>
           </div>          
         </div>
 
