--- a/faq.html
+++ b/faq.html
@@ -58,6 +58,7 @@
     <li><a href="#" class="menu-underline">контакты</a></li>
     <li><a href="#" class="menu-underline">отзывы</a></li>
     <li><a href="#" class="menu-underline">FAQ</a></li>
+    <li><a href="" style="display: inline-block;">RU</a> | <a href="" style="display: inline-block;">ENG</a></li>
     </ul>
     </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
