--- a/services-photo.html
+++ b/services-photo.html
@@ -20,6 +20,9 @@
 	<!-- custom css -->
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
+
+	<!-- adaptive css -->
+	<link rel="stylesheet" type="text/css" href="css/adaptive.css">
   </head>
   <body>
   <div class="body-wrapper">
@@ -69,7 +72,7 @@
 						<span class="service-number">1</span> <h3><a href="#" class="underline-link">Пляж Баваро (также его называют Los Corales)</a></h3>
 				</div>	
 				<div class="row">	
-						<div class="col-md-6 service-photo-wrapper">
+						<div class="col-md-6 col-sm-6 service-photo-wrapper">
 								<img src="img/service-example.png" class="service-main-photo" alt="">
 								<div class="col-md-10 details-description">
 										<span class="service-photo-icon"><img src="img/dollar-symbol.png" alt="">Стоимость</span>
@@ -97,7 +100,7 @@
 						<span class="service-number">1</span> <h3><a href="#" class="underline-link">Пляж Баваро (также его называют Los Corales)</a></h3>
 				</div>	
 				<div class="row">	
-						<div class="col-md-6 service-photo-wrapper">
+						<div class="col-md-6 col-sm-6 service-photo-wrapper">
 								<img src="img/service-example.png" class="service-main-photo" alt="">
 								<div class="col-md-10 details-description">
 										<span class="service-photo-icon"><img src="img/dollar-symbol.png" alt="">Стоимость</span>
@@ -125,7 +128,7 @@
 						<span class="service-number">1</span> <h3><a href="#" class="underline-link">Пляж Баваро (также его называют Los Corales)</a></h3>
 				</div>	
 				<div class="row">	
-						<div class="col-md-6 service-photo-wrapper">
+						<div class="col-md-6 col-sm-6 service-photo-wrapper">
 								<img src="img/service-example.png" class="service-main-photo" alt="">
 								<div class="col-md-10 details-description">
 										<span class="service-photo-icon"><img src="img/dollar-symbol.png" alt="">Стоимость</span>
