--- a/services-wedding.html
+++ b/services-wedding.html
@@ -20,6 +20,9 @@
 	<!-- custom css -->
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
+
+	<!-- adaptive css -->
+	<link rel="stylesheet" type="text/css" href="css/adaptive.css">
   </head>
   <body>
   <div class="body-wrapper">
