--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
 	<link rel="stylesheet" type="text/css" href="css/owl.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 
+	<!-- adaptive css -->
+	<link rel="stylesheet" href="css/adaptive.css">
+
 	<!-- WOW js -->
 	<script src="js/wow.min.js" type="text/javascript"></script>
 	<script>
@@ -74,14 +77,14 @@
 
 <section id="main-page-services">
 	<div class="row">
-		<div class="col-md-8 main-service-first wow fadeInLeft">
+		<div class="col-md-8 col-sm-8 col-xs-12 main-service-first wow fadeInLeft">
 			
 		</div>
-		<div class="col-md-4 main-service-description wow slideInDown">
+		<div class="col-md-4 col-sm-4 col-xs-12 main-service-description wow slideInDown">
 			<div class="main-service-description-wrapper">
 				<h3>Свадебные церемонии</h3>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-				<div class="services-button-wrapper">
+				<div class="services-button-wrapper col-xs-8 col-xs-offset-2">
 					<div class="wrapper-inner-tab-backgrounds-second">
 			            <div class="sim-button button29">
 			              	<span><a href="#" class="order-form-open">Узнать больше</a></span>
@@ -92,11 +95,14 @@
 		</div>
 	</div>
 	<div class="row">
-		<div class="col-md-4 main-service-description wow fadeInLeft">
+		<div class="col-md-8 col-sm-8 col-xs-12 main-service-second wow fadeInRight col-md-push-4 col-sm-push-4">
+			
+		</div>
+		<div class="col-md-4 col-sm-4 col-xs-12 main-service-description wow fadeInLeft col-md-pull-8 col-sm-pull-8">
 			<div class="main-service-description-wrapper">
 				<h3>фотосессии</h3>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-				<div class="services-button-wrapper">
+				<div class="services-button-wrapper col-xs-8 col-xs-offset-2">
 					<div class="wrapper-inner-tab-backgrounds-second">
 			            <div class="sim-button button29">
 			              	<span><a href="#" class="order-form-open">Узнать больше</a></span>
@@ -105,9 +111,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="col-md-8 main-service-second wow fadeInRight">
-			
-		</div>
+		
 	</div>
 </section>
 
@@ -116,15 +120,15 @@
 		<div class="col-md-12 portfolio-gallery-wrapper">
 				<div class="photo-preview">
 					<div class="photo-mix">
-			            <a href="img/sw1.jpg" class="min-photo col-md-4 mix"><div class="img-container" style="background: url('img/sw1.jpg') center center / cover;"></div></a>
-			            <a href="img/sw2.jpg" class="min-photo col-md-4 mix"><div class="img-container" style="background: url('img/sw2.jpg') center center / cover;"></div></a>
-			            <a href="img/sw3.jpg" class="min-photo col-md-4 mix"><div class="img-container" style="background: url('img/sw3.jpg') center center / cover;"></div></a>
-			            <a href="img/sw1.jpg" class="min-photo col-md-4 mix"><div class="img-container" style="background: url('img/sw1.jpg') center center / cover;"></div></a>
-			            <a href="img/sw2.jpg" class="min-photo col-md-4 mix"><div class="img-container" style="background: url('img/sw2.jpg') center center / cover;"></div></a>
-			            	<div class="services-button-wrapper col-md-4">
+			            <a href="img/sw1.jpg" class="min-photo col-md-4 col-sm-4 col-xs-6 mix"><div class="img-container" style="background: url('img/sw1.jpg') center center / cover;"></div></a>
+			            <a href="img/sw2.jpg" class="min-photo col-md-4 col-sm-4 col-xs-6 mix"><div class="img-container" style="background: url('img/sw2.jpg') center center / cover;"></div></a>
+			            <a href="img/sw3.jpg" class="min-photo col-md-4 col-sm-4 col-xs-6 mix"><div class="img-container" style="background: url('img/sw3.jpg') center center / cover;"></div></a>
+			            <a href="img/sw1.jpg" class="min-photo col-md-4 col-sm-4 col-xs-6 mix"><div class="img-container" style="background: url('img/sw1.jpg') center center / cover;"></div></a>
+			            <a href="img/sw2.jpg" class="min-photo col-md-4 col-sm-4 col-xs-6 mix"><div class="img-container" style="background: url('img/sw2.jpg') center center / cover;"></div></a>
+			            	<div class="services-button-wrapper col-md-4 col-sm-4 col-xs-6 ">
 								<div class="wrapper-inner-tab-backgrounds-second">
 						            <div class="sim-button button29">
-						              	<span><a href="#">все фотографии</a></span>
+						              	<span><a href="#">портфолио</a></span>
 						            </div>
 				        		</div>
 							</div>
@@ -145,7 +149,7 @@
 	<div class="main-page-about-wrapper">	
 		<div class="lera-photo wow slideInLeft" style="background: url('img/lera_photo_wide.png') center center / cover;">
 		</div>
-		<div class="about-description-wrapper wow slideInRight">
+		<div class="about-description-wrapper col-md-push-5 col-sm-push-5 col-xs-12 wow slideInRight">
 			<p class="about-description pull-right">
 				Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
 			</p>
@@ -159,13 +163,13 @@
 					<div class="col-md-2 col-md-offset-1"><img src="img/review-avatar.png" alt=""></div>
 					<div class="col-md-8">
 						<div class="row">
-							<div class="col-md-1">
+							<div class="col-md-1 quotes-wrapper">
 							<span class="quotes pull-left">"</span>
 							</div>
 							<div class="col-md-8 slide-review">
 								Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
 							</div>
-							<div class="col-md-1">
+							<div class="col-md-1 quotes-wrapper">
 							<span class="quotes pull-left">"</span>
 							</div>
 						</div>
@@ -175,18 +179,17 @@
 					<div class="col-md-2 col-md-offset-1"><img src="img/review-avatar.png" alt=""></div>
 					<div class="col-md-8">
 						<div class="row">
-							<div class="col-md-1">
+							<div class="col-md-1 quotes-wrapper">
 							<span class="quotes pull-left">"</span>
 							</div>
 							<div class="col-md-8 slide-review">
 								Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
 							</div>
-							<div class="col-md-1">
+							<div class="col-md-1 quotes-wrapper">
 							<span class="quotes pull-left">"</span>
 							</div>
 						</div>
-					</div>
-			</div>
+					</div></div>
 			
 
 
@@ -203,9 +206,9 @@
     <footer>
 	<div class="container">
 		<div class="row">
-			<div id="logo" class="col-md-4">
+			<div id="logo" class="col-md-3 col-sm-4">
 			</div>
-			<div class="col-md-3">
+			<div class="col-md-2 col-sm-3 footer_navbar_wrapper">
 				<h6>меню</h6>
 				<ul id="footer_navbar">
 					<li><a href="#" class="menu-underline">главная</a></li>
@@ -217,7 +220,7 @@
 					<li><a href="#" class="menu-underline">FAQ</a></li> 
 				</ul>
 			</div>
-			<div class="col-md-3">
+			<div class="col-md-3 col-sm-5 col-xs-offset-1 col-xs-5">
 				<h6>контакты</h6>
 				<ul id="footer_contacts">
 					<li>WhatsApp<br>+380669709791</li>
@@ -231,7 +234,7 @@
 					<span>Email<br>merenkovkonst@gmail.com</span>
 				</div>
 			</div>
-			<div class="col-md-2">
+			<div class="col-md-2 col-sm-2 col-xs-6">
 				<h6>follow me</h6>
 				<div class="social">
 					<a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
