all frontend is done

--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
   <body>
   <div class="body-wrapper">
   <header>
-    <div class="container">
+    <div class="my-container">
       <nav class="navbar navbar-default " role="navigation">
         <div class="container-fluid">
         <!-- <!—Название сайта и кнопка раскрытия меню для мобильных-->
@@ -59,7 +59,7 @@
   </header>
   
   <section id="about-page">
-    <div class="container">
+    <div class="my-container">
       <div class="row about-first-section">
         <div class="col-md-8">
           <img src="img/icon_photo.png" class="about-page-icon" alt="">
