--- a/fotosessions.html
+++ b/fotosessions.html
@@ -26,7 +26,7 @@
   </head>
   <body>
   <header>
-  	<div class="container">
+  	<div class="my-container">
       <nav class="navbar navbar-default " role="navigation">
         <div class="container-fluid">
         <!-- <!—Название сайта и кнопка раскрытия меню для мобильных-->
@@ -61,7 +61,7 @@
   </header>
 
   <section id="photosessions">
-  <div class="container">
+  <div class="my-container">
 
     <!-- Одна фотосессия -->
       <div class="photosession-preview-wrapper">
