--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 		</div>
 		 
 		<!-- <!—Само меню--> 
-		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-		<ul class="nav navbar-nav nav-wrapper">
+		<div class="collapse navbar-collapse " id="bs-example-navbar-collapse-1">
+		<ul class="nav navbar-nav nav-wrapper main-page-desctop-menu">
 		<li><a href="#" class="menu-underline">Главная</a></li>
 		<li><a href="#" class="menu-underline">портфолио</a></li>
 		<li><a href="#" class="menu-underline">обо мне</a></li>
@@ -66,6 +66,7 @@
 		</div><!-- /.navbar-collapse -->
 		</div><!-- /.container-fluid -->
 		</nav>
+		<div class="lang-sep-wrapper"><span class="active-lang lang-sep">RU</span> | <span class="lang-sep">ENG</span></div>
 
 		<div class="main-photo"></div>
 		<div class="logo-container ">
@@ -196,13 +197,6 @@
 		</div>
 </section>
 
-
-
-
-
-
-
-
     <footer>
 	<div class="container">
 		<div class="row">
@@ -222,11 +216,6 @@
 			</div>
 			<div class="col-md-3 col-sm-5 col-xs-offset-1 col-xs-5">
 				<h6>контакты</h6>
-				<ul id="footer_contacts">
-					<li>WhatsApp<br>+380669709791</li>
-					<li>Skype<br>lesya.vasilenko_</li>
-					<li>Email<br>merenkovkonst@gmail.com</li>
-				</ul>
 				<div id="footer_contacts">
 					<span>Телефон<br>+380669709791</span>
 					<span>WhatsApp<br>+380669709791</span>
@@ -234,13 +223,14 @@
 					<span>Email<br>merenkovkonst@gmail.com</span>
 				</div>
 			</div>
-			<div class="col-md-2 col-sm-2 col-xs-6">
+			<div class="col-md-2 col-sm-2 col-xs-6 footer-social-wrapper">
 				<h6>follow me</h6>
 				<div class="social">
 					<a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
 					<a href="#"><i class="fa fa-vk" aria-hidden="true"></i></a>
 					<a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
 				</div>
+				<p class="dom-time">Время в доминикане <br> <i class="fa fa-clock-o" aria-hidden="true"></i> 03:15</p>
 			</div>
 		</div>
 	</div>
