--- a/reviews.html
+++ b/reviews.html
@@ -27,7 +27,7 @@
   <body>
   <div class="body-wrapper">
   <header>
-	<div class="container">
+	<div class="my-container">
 	  <nav class="navbar navbar-default " role="navigation">
 		<div class="container-fluid">
 		<!-- <!—Название сайта и кнопка раскрытия меню для мобильных-->
@@ -62,7 +62,7 @@
   </header>
 
 <section id="reviews-page">
-	<div class="container">	
+	<div class="my-container">	
 		<div class="row left-review one-review">
 			<div class="col-md-7 col-sm-12">
 				<div class="quotes">"</div>
