--- a/services-inside.html
+++ b/services-inside.html
@@ -25,11 +25,14 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/owl.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
+
+	<!-- adaptive css -->
+	<link rel="stylesheet" href="css/adaptive.css">
   </head>
   <body>
   <div class="body-wrapper">
   <header>
-	<div class="container">
+	<div class="my-container">
 	  <nav class="navbar navbar-default " role="navigation">
 		<div class="container-fluid">
 		<!-- <!—Название сайта и кнопка раскрытия меню для мобильных-->
@@ -87,7 +90,7 @@
   </div>
 
 <section id="services-inside-page">
-	<div class="container">
+	<div class="my-container">
 		<div class="services-inside-wrapper">
 			<h3>Пляж Баваро</h3>
 	 		<p class="short-description">
@@ -96,9 +99,7 @@
 	 		</p>
 	 			<div class="carousel-wrapper">
 		 			<div class="owl-carousel carousel_1">
-		 				<!-- <div class="slide-wrapper"><img src="img/slide1.png" alt=""></div>
-		 				<div class="slide-wrapper"><img src="img/slide2.png" alt=""></div>
-		 				<div class="slide-wrapper"><img src="img/slide3.png" alt=""></div> -->
+		 				
 		 				<div class="image-div" style="background-image:url('img/slide1.png')"></div>
 		 				<div class="image-div" style="background-image:url('img/slide2.png')"></div>
 		 				<div class="image-div" style="background-image:url('img/slide3.png')"></div>
