--- a/services-photo.html
+++ b/services-photo.html
@@ -27,7 +27,7 @@
   <body>
   <div class="body-wrapper">
   <header>
-	<div class="container">
+	<div class="my-container">
 	  <nav class="navbar navbar-default " role="navigation">
 		<div class="container-fluid">
 		<!-- <!—Название сайта и кнопка раскрытия меню для мобильных-->
@@ -66,7 +66,7 @@
 
 <section id="services-photo-page">
 	
-	<div class="container">	
+	<div class="my-container">	
 		<div class="service-wrapper">
 				<div class="row service-title-wrapper">	
 						<span class="service-number">1</span> <h3><a href="#" class="underline-link">Пляж Баваро (также его называют Los Corales)</a></h3>
