--- a/services.html
+++ b/services.html
@@ -29,7 +29,7 @@
   <body>
   <div class="body-wrapper">
   <header>
-	<div class="container">
+	<div class="my-container">
 	  <nav class="navbar navbar-default " role="navigation">
 		<div class="container-fluid">
 		<!-- <!—Название сайта и кнопка раскрытия меню для мобильных-->
@@ -64,7 +64,7 @@
   </header>
 	
 	<section id="services-page">
-		<div class="container">
+		<div class="my-container">
 			<div class="row">
 				<div class="service-photosession col-md-6" style="background: url('img/service-wedding.png') center center / cover">
 					<div class="services-button-wrapper">
