--- a/contacts.html
+++ b/contacts.html
@@ -26,7 +26,7 @@
   </head>
   <body>
   <header>
-  	<div class="container">
+  	<div class="my-container">
       <nav class="navbar navbar-default " role="navigation">
         <div class="container-fluid">
         <!-- <!—Название сайта и кнопка раскрытия меню для мобильных-->
@@ -61,7 +61,7 @@
   </header>
 
   <section id="contacts">
-    <div class="container">
+    <div class="my-container">
       <div class="row">
         <div class="col-md-5">
           <div class="contact-detail-wrapper">
@@ -91,10 +91,11 @@
           <img src="img/lera_photo.png">
         </div>
       </div>
-      <div class="map col-md-12">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d484054.9550171681!2d-70.23115596840368!3d18.588490025029767!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8eaf8838def1b6f5%3A0xa6020f24060df7e0!2z0JTQvtC80LjQvdC40LrQsNC90YHQutCw0Y8g0KDQtdGB0L_Rg9Cx0LvQuNC60LA!5e0!3m2!1sru!2sru!4v1506271320936" width="100%" height="500" frameborder="0" style="border:0" allowfullscreen></iframe>
-      </div>
+      
     </div>
+    <div class="map">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d484054.9550171681!2d-70.23115596840368!3d18.588490025029767!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8eaf8838def1b6f5%3A0xa6020f24060df7e0!2z0JTQvtC80LjQvdC40LrQsNC90YHQutCw0Y8g0KDQtdGB0L_Rg9Cx0LvQuNC60LA!5e0!3m2!1sru!2sru!4v1506271320936" width="100%" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+      </div>
   </section>
 
 
