--- a/photosessions-inside.html
+++ b/photosessions-inside.html
@@ -27,7 +27,7 @@
   <body>
   <div class="body-wrapper">
   <header>
-	<div class="container">
+	<div class="my-container">
 	  <nav class="navbar navbar-default " role="navigation">
 		<div class="container-fluid">
 		<!-- <!—Название сайта и кнопка раскрытия меню для мобильных-->
@@ -66,7 +66,7 @@
   </header>
 
 <section id="photosessions-inside">   
-	 <div class="container">
+	 <div class="my-container">
 	 	<div class="photosession-inside-wrapper">
 	 		<h3>Оксана и Андрей</h3>
 	 		<p class="date-time">21.07.2017</p>
