--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,7 @@
   <body>
   <div class="body-wrapper">
   <header>
-	<div class="container">
+	<div class="my-container">
 	  <nav class="navbar navbar-default " role="navigation">
 		<div class="container-fluid">
 		<!-- <!—Название сайта и кнопка раскрытия меню для мобильных-->
@@ -64,7 +64,7 @@
 	  
 
 
-	<div class="container">
+	<div class="my-container">
 		<div class="row portfolio-content-wrapper">
 			<div class="col-md-3 col-sm-3 col-xs-12 menubar">
 				<ul class="photo-category">
